--- a/cast-custom-receiver/style.css
+++ b/cast-custom-receiver/style.css
@@ -1,7 +1,7 @@
 body {
 	overflow:hidden;
 }
-#message {
+.message {
 	height:720PX;
 	width:1280PX;
 	text-align:center;
@@ -26,5 +26,22 @@ body {
 	position:relative;
 	background-color:white;
 	padding:40px;
+	height:300px;
+	width:150px;
 	color:black;
+	border:5px solid black;
+	margin-left:auto;
+	margin-right:auto;
+	font-family:Verdana, Geneva, sans-serif;
+	font-size:30px;
+	font-weight:bold;
+}
+
+#cardContainer {
+	width:100%;
+	display:flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
 }
