--- a/cast-custom-receiver/style.css
+++ b/cast-custom-receiver/style.css
@@ -2,6 +2,7 @@ body {
 	overflow:hidden;
 	background-color:gray;
 	padding:20px;
+	background-image:url('img/wood.jpg');
 }
 .message {
 	height:720PX;
@@ -27,18 +28,18 @@ body {
 .card {
 	position:relative;
 	background-color:white;
-	padding:40px;
+	padding:10px;
 	height:200px;
 	width:100px;
 	color:black;
-	border:5px solid black;
+	border:5px solid white;
 	margin-left:auto;
 	margin-right:auto;
 	font-family:Verdana, Geneva, sans-serif;
 	font-size:20px;
 	font-weight:bold;
 	border-radius:10px;
-	box-shadow: 5px 5px 5px #000000;
+	box-shadow: 0px 0px 3px rgba(0,0,0,.5);
 
 }
 
