--- a/cast-custom-receiver/style.css
+++ b/cast-custom-receiver/style.css
@@ -30,17 +30,17 @@ body {
 	background-color:white;
 	padding:10px;
 	height:200px;
-	width:150px;
+	width:125px;
 	color:black;
 	border:5px solid white;
 	margin-left:auto;
 	margin-right:auto;
 	font-family:Verdana, Geneva, sans-serif;
-	font-size:15px;
+	font-size:18px;
 	font-weight:bold;
 	border-radius:10px;
 	box-shadow: 0px 0px 5px rgba(0,0,0,.75);
-	transform:rotate(7deg);
+	-webkit-transform:rotate(7deg);
 }
 
 #cardContainer {
