all cards submitted

--- a/cast-custom-receiver/style.css
+++ b/cast-custom-receiver/style.css
@@ -39,7 +39,13 @@ body {
 	font-size:18px;
 	font-weight:bold;
 	border-radius:10px;
-	box-shadow: 0px 0px 5px rgba(0,0,0,.75);
+	box-shadow: 0px 0px 10px rgba(0,0,0,.75);
+}
+
+.card img {
+	position:absolute;
+	bottom:0;
+	left:0;
 }
 
 #cardContainer {
