--- a/cast-custom-receiver/style.css
+++ b/cast-custom-receiver/style.css
@@ -44,8 +44,8 @@ body {
 
 .card img {
 	position:absolute;
-	bottom:10px;
-	left:10px;
+	bottom:8px;
+	left:8px;
 	width:100px;
 }
 
@@ -68,4 +68,9 @@ body {
 	postiion:absolute;
 	bottom:100px;
 	left:100px;
+}
+
+#currentScore {
+	font-size:30px;
+	background-color:rgba(255,255,255,0.3);
 }
