--- a/cast-custom-receiver/style.css
+++ b/cast-custom-receiver/style.css
@@ -73,4 +73,7 @@ body {
 #currentScore {
 	font-size:30px;
 	background-color:rgba(255,255,255,0.3);
+	position:absolute;
+	bottom:20px;
+	left:20px;
 }
