all cards submitted

--- a/cast-custom-receiver/style.css
+++ b/cast-custom-receiver/style.css
@@ -12,7 +12,7 @@ body {
 	display: table-cell;
 	vertical-align:middle;
 	color:#FFFFFF;
-	background-color:#f000ff;
+	background-color:#000000;
 	font-weight:bold;
 	font-family:Verdana, Geneva, sans-serif;
 	font-size:40px;
